my-first-port-polio

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width"> 
              <h1>Welcome To</h1>
             <h1><span class="name-color" >Prince</span> Website</h1>
             <h3>World-class professional web dev</h3>
             <p>I love webdeveloping.I am the new one in this sector.It is one of the greatest sector in the world.I will learn until i become a webdeveloper</p>
+            <a class="button" target="_blank" href="https://www.youtube.com/">Button</a>
         </div>
         <div class="half-width">
             <img src="images/me.jpg" >
@@ -21,6 +22,33 @@
   
    
     </section>
+    <section class="second-section">
+        <div class="second-width">
+            <img src="images/me.jpg" >
+
+        </div>
+        <div class="like">
+            <h2>Big Dream</h2>
+            <h3>Upcoming Webdeveloper</h3>
+            <p>I love webdeveloping.I am the new one in this sector.It is one of the greatest sector in the world.I will learn until i become a webdeveloper.I want to full-fill my dream by programming-hero vai.</p>
+            <a class="my-button"  target="_blank" href="https://www.youtube.com/">Click</a>
+        </div>
+
+    </section>
+    <section class="experiance-section">
+        <h1>Experiance</h1>
+        <div id="fullstack" class="experiance-div">
+            <h1>Full Stack Webdeveloper</h1>
+            <p>I learn css/html/javascript/python.I become a fullstack webdeveoper.I have enought experiance.If you want for your work. You can hire me.If you wants me first time it will be free</p>
+        </div>
+        <div  id="babydeveloper"class="experiance-div">
+            <h1>Baby Webdeveloper</h1>
+            <p>I learn full stack webdeveloping from programming hero boy Jhankar mahbub vai.He teaches it in easy way.I learn full stack webdeveloping from programming hero boy Jhankar mahbub vai.He teaches it in easy way.</p>
+        </div>
+    </section>
+    <footer>
+        <p>No copy right issue.Everyone copy my portfolio</p>
+    </footer>
     
 </body>
 </html>
